update code package mapper