@@ -1,21 +1,20 @@
 package com.poly.salestshirt.service.impl;
 
-import com.poly.salestshirt.entity.Product;
 import com.poly.salestshirt.dto.request.ProductRequest;
-import com.poly.salestshirt.dto.response.common.PageResponse;
 import com.poly.salestshirt.dto.response.ProductResponse;
+import com.poly.salestshirt.dto.response.common.PageResponse;
+import com.poly.salestshirt.entity.Product;
+import com.poly.salestshirt.mapper.ProductMapper;
 import com.poly.salestshirt.repository.ProductRepository;
 import com.poly.salestshirt.service.ProductService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -23,7 +22,7 @@ import java.util.stream.Collectors;
 public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
-    private final ModelMapper modelMapper;
+    private final ProductMapper productMapper;
 
     @Override
     public PageResponse<?> getAllByStatusAndSearch(int pageNo, int pageSize, String keyword, Integer status) {
@@ -33,8 +32,7 @@ public class ProductServiceImpl implements ProductService {
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
         Page<Product> productPage = productRepository.findAllBySearchAndStatus(keyword, status, pageable);
 
-        List<ProductResponse> productResponseList = productPage.stream()
-                .map(product -> modelMapper.map(product, ProductResponse.class)).toList();
+        List<ProductResponse> productResponseList = productPage.stream().map(productMapper::toProductResponse).toList();
 
         return PageResponse.builder()
                 .pageNo(pageNo)
@@ -48,9 +46,8 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public String create(ProductRequest request) {
-        Product product = modelMapper.map(request, Product.class);
-        product.setStatus(1);
-        log.info("Create product code={}, name={}", product.getCode(), product.getName());
+        Product product = productMapper.toCreateProduct(request);
+        log.info("Create product coder={}, name={}", product.getCode(), product.getName());
         productRepository.save(product);
         log.info("Product add save!");
         return "Them san pham thanh cong";
@@ -59,9 +56,8 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public String update(int productId, ProductRequest request) {
         Product product = this.getProductById(productId);
-        if (product == null) return "Khong tim thay mau sac";
-        product = modelMapper.map(request, Product.class);
-        product.setId(productId);
+        if (product == null) return "Khong tim thay san pham";
+        productMapper.toUpdateProduct(product, request);
         productRepository.save(product);
         log.info("Product updated successfully");
         return "Sua san pham thanh cong";
@@ -82,13 +78,12 @@ public class ProductServiceImpl implements ProductService {
     public ProductResponse getProductResponse(int productId) {
         Product product = this.getProductById(productId);
         if(product == null) return null;
-        return modelMapper.map(product, ProductResponse.class);
+        return productMapper.toProductResponse(product);
     }
 
     @Override
     public List<ProductResponse> getAllByStatus(int status) {
-        return productRepository.findAllByStatus(status).stream()
-                .map(product -> modelMapper.map(product, ProductResponse.class)).collect(Collectors.toList());
+        return productRepository.findAllByStatus(status).stream().map(productMapper::toProductResponse).toList();
     }
 
     public Product getProductById(int productId) {
